dev/gitlab/registry/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry
  namespace: gitlab
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.mtaku3.com`)
      kind: Rule
      services:
        - name: gitlab-registry
          port: http-registry
  tls:
    secretName: registry-tls-cert
